--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Castoro&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -42,14 +41,20 @@
             <div id="bottom">
                 <div id="bottomf"></div>
                 <div id="bottoml">
-                    <div id="text">
-                        <h1 id="num">01</h1>
-                        <h1 id="ltr">grey dishes</h1>
+                    <div id="box">
+                        <div id="text">
+                            <h1 id="num">01</h1>
+                            <h1 id="ltr">grey dishes</h1>
+                        </div>
+                        <div id="arrow">
+                            <i class="ri-arrow-left-s-line"></i>
+                            <i class="ri-arrow-right-s-line"></i>
+                        </div>
+                        <div id="lineelem">
+                            <div id="lineelemf"></div>
+                            <div id="lineeleml"></div>
+                        </div>
                     </div>
-                     <div id="arrow">
-                        <i class="ri-arrow-left-s-line"></i>
-                        <i class="ri-arrow-right-s-line"></i>
-                     </div>
                 </div>
             </div>
         </div>
